<resources>
    <string name="app_name">test</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="editar">Editar</string>
    <string name="_01_01_2000">01/01/2000</string>
    <string name="nome">Nome:</string>
    <string name="telefone">Telefone:</string>
    <string name="data_de_nasciemento">Data de Nasciemento:</string>
    <string name="email">Email:</string>
    <string name="perfil">Perfil</string>
    <string name="_99_99999_9999">(99) 99999-9999</string>
    <string name="nome_sobrenome">Nome Sobrenome</string>
    <string name="plus">+</string>
    <string name="descri_o_do_produto">Descrição do produto</string>
    <string name="todo">TODO</string>
    <string name="produto">Produto</string>
    <string name="r_000_00">R$ 000,00</string>
    <string name="adicionar">Adicionar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_perfil">Perfil</string>
    <string name="title_carrinho">Carrinho</string>
    <string name="preco_produto">R$%.2f</string>
</resources>