<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp"
    android:background="@drawable/rounded_border"
    android:gravity="center">

    <ImageView
        android:id="@+id/product_image1"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_foreground"
        tools:ignore="ImageContrastCheck" /> <!-- Exemplo de imagem padrão -->
    <TextView
        android:id="@+id/product_name1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/produto"
        android:textSize="10sp"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:layout_marginTop="4dp"
        tools:ignore="SmallSp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/product_preco1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="15dp"
            android:text="@string/r_000_00"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/plus"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="15dp"
            android:background="@drawable/rounded_border_button"
            tools:ignore="TouchTargetSizeCheck,TextSizeCheck,TextContrastCheck" />
    </LinearLayout>
</LinearLayout>